@@ -11,7 +11,6 @@ gnome-dump-metadata
 gnome-moz-remote
 gconfigger
 gnome-gen-mimedb
-gnome-portability.h
 libgnome-2.0.pc
 test-libgnome
 libgnome.defs
