@@ -6,6 +6,8 @@
 
 	* gnome-i18nP.h: Moved all the external declarations from gnome-i18n.h here.
 
+	* gnome-portability.h.in: Removed; this is now in libgnomebase/libgnomebase.
+
 2001-04-14  Martin Baulig  <baulig@suse.de>
 
 	* gnome-program.h (GNOME_PARAM_GCONF_CLIENT): New GnomeProgram property.
